feat: implemented responsiveness and basic layout with mockup values

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,31 @@
 @import "tailwindcss";
+
+body {
+    background-color: #1e1e2e;
+    color: #cdd6f4;
+}
+
+pre {
+    font-family: sans-serif;
+}
+
+.secondary-color-bg {
+    background-color: #313244;
+}
+
+.hljs-punctuation:first-child,
+.hljs-punctuation:last-child {
+    color: #f38ba8;
+}
+
+.hljs-punctuation {
+    color: #f9e2af;
+}
+
+.hljs-attr {
+    color: #89b4fa;
+}
+
+.hljs-string {
+    color: #a6e3a1;
+}
